test/analyze/type_check/destructuring/expected_tuple_constructor_error.myte
module test

type Rec { field: Int }

val global: Int = 1

fun main() {
  var x: Int = 1;
  Rec (x) = Rec { field: 1 };
  global (x) = 1;
}